Revert "enable sanitizer in spdk 2"
This reverts commit 64a48d3cb7961d45071ef3d1f80ebe4e8602131c.

--- a/docker/Dockerfile_spdk
+++ b/docker/Dockerfile_spdk
@@ -8,7 +8,7 @@ WORKDIR /root
 
 COPY ./ /root/spdk/
 
-RUN dnf install -y git diffutils procps-ng pip kmod hostname wget pkg-config cmake nano systemd-udev libasan
+RUN dnf install -y git diffutils procps-ng pip kmod hostname wget pkg-config cmake nano systemd-udev libasan8
 
 RUN cd spdk && git submodule update --init --depth 1
 
