--- a/docker/Dockerfile_spdk
+++ b/docker/Dockerfile_spdk
@@ -16,7 +16,7 @@ RUN pip install requests
 
 RUN cd spdk && git submodule update --init --depth 1
 
-RUN cd spdk && scripts/pkgdep.sh --rdma --pmem --idxd
+RUN cd spdk && scripts/pkgdep.sh --rdma --pmem
 
 RUN mkdir /tmp/pmem
 
@@ -25,6 +25,6 @@ RUN sed -i "s/^#define SPDK_BDEV_QOS_MIN_IOS_PER_SEC.*/#define SPDK_BDEV_QOS_MIN
 RUN sed -i "s/^#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC.*/#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC\t5000/" /root/spdk/lib/bdev/bdev.c
 
 RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --with-ocf --with-fuse\
-     --with-nvme-cuse --target-arch=nehalem --with-idxd
+     --with-nvme-cuse --target-arch=nehalem
 
 RUN cd spdk && make --no-builtin-rules -j16
