--- a/docker/Dockerfile_spdk
+++ b/docker/Dockerfile_spdk
@@ -27,4 +27,4 @@ RUN sed -i "s/^#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC.*/#define SPDK_BDEV_QOS_T
 RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --with-ocf --with-fuse\
      --with-nvme-cuse --target-arch=nehalem --with-idxd --enable-debug
 
-RUN cd spdk && make make DEBUG=y --no-builtin-rules -j16
+RUN cd spdk && make DEBUG=y --no-builtin-rules -j16
