--- a/docker/Dockerfile_spdk
+++ b/docker/Dockerfile_spdk
@@ -25,6 +25,6 @@ RUN sed -i "s/^#define SPDK_BDEV_QOS_MIN_IOS_PER_SEC.*/#define SPDK_BDEV_QOS_MIN
 RUN sed -i "s/^#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC.*/#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC\t5000/" /root/spdk/lib/bdev/bdev.c
 
 RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --with-ocf --with-fuse\
-     --with-nvme-cuse --target-arch=nehalem --with-idxd --enable-debug
+     --with-nvme-cuse --target-arch=nehalem --with-idxd
 
-RUN cd spdk && make DEBUG=y --no-builtin-rules -j16
+RUN cd spdk && make --no-builtin-rules -j16
