--- a/docker/Dockerfile_spdk
+++ b/docker/Dockerfile_spdk
@@ -1,4 +1,4 @@
-FROM fedora:37
+FROM fedora:41
 
 # push to "simplyblock/spdk-core:$TAG"
 
@@ -10,13 +10,15 @@ COPY ./ /root/spdk/
 
 RUN dnf install -y git diffutils procps-ng pip kmod hostname wget pkg-config cmake nano systemd-udev
 
+RUN yum install -y dosfstools ntfsprogs e2fsprogs ntfs-* gdb parted fio xfsprogs libasan libubsan
+
+RUN pip install requests
+
 RUN cd spdk && git submodule update --init --depth 1
 
 RUN cd spdk && scripts/pkgdep.sh --rdma --pmem
 
 RUN mkdir /tmp/pmem
-
-RUN pip3 install grpcio-tools==1.51.3 protobuf==4.22.1
 
 RUN sed -i "s/^#define SPDK_JSONRPC_RECV_BUF_SIZE.*/#define SPDK_JSONRPC_RECV_BUF_SIZE\t(32 * 1024 * 1024)/" /root/spdk/lib/jsonrpc/jsonrpc_internal.h
 
@@ -24,6 +26,7 @@ RUN sed -i "s/^#define SPDK_BDEV_QOS_MIN_IOS_PER_SEC.*/#define SPDK_BDEV_QOS_MIN
 
 RUN sed -i "s/^#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC.*/#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC\t5000/" /root/spdk/lib/bdev/bdev.c
 
-RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --disable-examples --with-ocf --with-fuse --with-nvme-cuse --target-arch=nehalem
+RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --disable-examples --with-ocf --with-fuse\
+     --with-nvme-cuse --target-arch=nehalem
 
 RUN cd spdk && make --no-builtin-rules -j16
