--- a/docker/Dockerfile_spdk_arm
+++ b/docker/Dockerfile_spdk_arm
@@ -25,53 +25,53 @@ RUN sed -i "s/^#define SPDK_BDEV_QOS_MIN_IOS_PER_SEC.*/#define SPDK_BDEV_QOS_MIN
 
 RUN sed -i "s/^#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC.*/#define SPDK_BDEV_QOS_TIMESLICE_IN_USEC\t5000/" /root/spdk/lib/bdev/bdev.c
 
-RUN sed -i 's/^\tadr\s\+sm3const_adr,SM3_CONSTS$/\tadrp    sm3const_adr, SM3_CONSTS\
-\tadd     sm3const_adr, sm3const_adr, :lo12:SM3_CONSTS/' /root/spdk/isa-l-crypto/sm3_mb/aarch64/sm3_mb_sve.S
+RUN sed -i 's/^\tadr\s\+sm3const_adr,SM3_CONSTS$/__REPLACE__/' /root/spdk/isa-l-crypto/sm3_mb/aarch64/sm3_mb_sve.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    sm3const_adr, SM3_CONSTS\n\tadd     sm3const_adr, sm3const_adr, :lo12:SM3_CONSTS')|" /root/spdk/isa-l-crypto/sm3_mb/aarch64/sm3_mb_sve.S
 
-RUN sed -i 's/^\tadr\s\+key_adr, KEY$/\tadrp    key_adr, KEY\
-\tadd     key_adr, key_adr, :lo12:KEY/' /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x1_ce.S
+RUN sed -i 's/^\tadr\s\+key_adr, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x1_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    key_adr, KEY\n\tadd     key_adr, key_adr, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x1_ce.S
 
-RUN sed -i 's/^\tadr\s\+key_adr, KEY$/\tadrp    key_adr, KEY\
-\tadd     key_adr, key_adr, :lo12:KEY/' /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x2_ce.S
+RUN sed -i 's/^\tadr\s\+key_adr, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x2_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    key_adr, KEY\n\tadd     key_adr, key_adr, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha512_mb/aarch64/sha512_mb_x2_ce.S
 
-RUN sed -i 's/^\tadr\s\+tmp, KEY$/\tadrp    tmp, KEY\
-\tadd     tmp, tmp, :lo12:KEY/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x1_ce.S
+RUN sed -i 's/^\tadr\s\+tmp, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x1_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, KEY\n\tadd     tmp, tmp, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x1_ce.S
 
-RUN sed -i 's/^\tadr\s\+tmp, KEY$/\tadrp    tmp, KEY\
-\tadd     tmp, tmp, :lo12:KEY/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x2_ce.S
+RUN sed -i 's/^\tadr\s\+tmp, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x2_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, KEY\n\tadd     tmp, tmp, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x2_ce.S
 
-RUN sed -i 's/^\tadr\s\+tmp, KEY$/\tadrp    tmp, KEY\
-\tadd     tmp, tmp, :lo12:KEY/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x3_ce.S
+RUN sed -i 's/^\tadr\s\+tmp, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x3_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, KEY\n\tadd     tmp, tmp, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x3_ce.S
 
-RUN sed -i 's/^\tadr\s\+tmp, KEY$/\tadrp    tmp, KEY\
-\tadd     tmp, tmp, :lo12:KEY/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x4_ce.S
+RUN sed -i 's/^\tadr\s\+tmp, KEY$/__REPLACE__/' /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x4_ce.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, KEY\n\tadd     tmp, tmp, :lo12:KEY')|" /root/spdk/isa-l-crypto/sha256_mb/aarch64/sha256_mb_x4_ce.S
 
-RUN sed -i 's/^\tadr\s\+mur_c1, C1$/\tadrp    mur_c1, C1\
-\tadd     mur_c1, mur_c1, :lo12:C1/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
+RUN sed -i 's/^\tadr\s\+mur_c1, C1$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    mur_c1, C1\n\tadd     mur_c1, mur_c1, :lo12:C1')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
 
-RUN sed -i 's/^\tadr\s\+mur_c2, C2$/\tadrp    mur_c2, C2\
-\tadd     mur_c2, mur_c2, :lo12:C2/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
+RUN sed -i 's/^\tadr\s\+mur_c2, C2$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    mur_c2, C2\n\tadd     mur_c2, mur_c2, :lo12:C2')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
 
-RUN sed -i 's/^\tadr\s\+tmp, N1$/\tadrp    tmp, N1\
-\tadd     tmp, tmp, :lo12:N1/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
+RUN sed -i 's/^\tadr\s\+tmp, N1$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, N1\n\tadd     tmp, tmp, :lo12:N1')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
 
-RUN sed -i 's/^\tadr\s\+tmp, N2$/\tadrp    tmp, N2\
-\tadd     tmp, tmp, :lo12:N2/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
+RUN sed -i 's/^\tadr\s\+tmp, N2$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    tmp, N2\n\tadd     tmp, tmp, :lo12:N2')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/mh_sha1_murmur3_block_asimd.S
 
-RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_0$/\tadrp    sha1key_adr, KEY_0\
-\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_0/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
+RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_0$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    sha1key_adr, KEY_0\n\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_0')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
 
-RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_1$/\tadrp    sha1key_adr, KEY_1\
-\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_1/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
+RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_1$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    sha1key_adr, KEY_1\n\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_1')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
 
-RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_2$/\tadrp    sha1key_adr, KEY_2\
-\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_2/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
+RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_2$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    sha1key_adr, KEY_2\n\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_2')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
 
-RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_3$/\tadrp    sha1key_adr, KEY_3\
-\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_3/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
+RUN sed -i 's/^\tadr\s\+sha1key_adr, KEY_3$/__REPLACE__/' /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    sha1key_adr, KEY_3\n\tadd     sha1key_adr, sha1key_adr, :lo12:KEY_3')|" /root/spdk/isa-l-crypto/mh_sha1_murmur3_x64_128/aarch64/sha1_asimd_common.S
 
-RUN sed -i 's/^\tadr\s\+md5key_adr,MD5_CONST_KEYS$/\tadrp    md5key_adr,MD5_CONST_KEYS\
-\tadd     md5key_adr, md5key_adr, :lo12:MD5_CONST_KEYS/' /root/spdk/isa-l-crypto/md5_mb/aarch64/md5_mb_sve.S
+RUN sed -i 's/^\tadr\s\+md5key_adr,MD5_CONST_KEYS$/__REPLACE__/' /root/spdk/isa-l-crypto/md5_mb/aarch64/md5_mb_sve.S && \
+    sed -i "s|__REPLACE__|$(printf '\tadrp    md5key_adr,MD5_CONST_KEYS\n\tadd     md5key_adr, md5key_adr, :lo12:MD5_CONST_KEYS')|" /root/spdk/isa-l-crypto/md5_mb/aarch64/md5_mb_sve.S
 
 RUN cd spdk && ./configure --with-crypto --with-rdma --disable-tests --disable-unit-tests --disable-examples --with-ocf --with-fuse --with-nvme-cuse
 
